--- a/SMSInfoService/pom.xml
+++ b/SMSInfoService/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>hibernate-jpa-2.1-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
