--- a/SMSInfoServiceImpl/src/test/resources/operatorGateway.properties
+++ b/SMSInfoServiceImpl/src/test/resources/operatorGateway.properties
@@ -6,3 +6,8 @@ lifeHost=http://sms.businesslife.com.ua/clients.php
 lifeAuthHost=sms.businesslife.com.ua
 lifeHostUser=NovaPoshta
 lifeHostPassword=NovaPoshta
+
+lifeNewHost=https://api.life.com.ua/ip2sms/
+lifeNewAuthHost=api.life.com.ua
+lifeNewHostUser=NovaPoshta
+lifeNewHostPassword=eEQo95eufh2trfphb
