--- a/SMSInfoServiceImpl/pom.xml
+++ b/SMSInfoServiceImpl/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>spring-context-support</artifactId>
             <version>3.2.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework.oxm</artifactId>
+            <version>3.2.5.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
