Added client module for testing, changed injection approach for properties

--- a/SMSInfoServiceImpl/src/main/resources/META-INF/dev.smsinfoservice.properties
+++ b/SMSInfoServiceImpl/src/main/resources/META-INF/dev.smsinfoservice.properties
@@ -1,4 +1,4 @@
-endpointSmsInfo.address=http://localhost:7000/smsinfo
+smsInfoServiceWsServer.address=http://localhost:7000/smsinfo
 # database
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/np_sms_db
