--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>npParent</artifactId>
         <groupId>ua.np.maven</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <name>SMSInfo</name>
@@ -19,6 +19,7 @@
     <modules>
        <module>SMSInfoService</module>
        <module>SMSInfoServiceImpl</module>
+       <module>SMSInfoServiceClient</module>
     </modules>
 
 </project>
