Making application work

--- a/SMSInfoServiceClient/src/test/resources/META-INF/dev.smsinfoservice.properties
+++ b/SMSInfoServiceClient/src/test/resources/META-INF/dev.smsinfoservice.properties
@@ -6,5 +6,5 @@ smsInfoServiceWsServer.address=http://localhost:7000/smsinfo
 #dataSource.password=mysql
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=true
