--- a/SMSInfoServiceClient/pom.xml
+++ b/SMSInfoServiceClient/pom.xml
@@ -73,6 +73,13 @@
         </dependency>
         <!-- END: TestNG -->
 
+        <!--Database-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
+        </dependency>
+
         <!--HSQLDB - used for testing-->
         <dependency>
             <groupId>org.hsqldb</groupId>
