--- a/SMSInfoServiceImpl/src/main/resources/META-INF/dev.smsinfoservice.properties
+++ b/SMSInfoServiceImpl/src/main/resources/META-INF/dev.smsinfoservice.properties
@@ -1,6 +1,6 @@
 smsInfoServiceWsServer.address=http://localhost:7000/smsinfo
 # database
 dataSource.driverClassName=com.mysql.jdbc.Driver
-dataSource.url=jdbc:mysql://localhost:3306/np_sms_db
+dataSource.url=jdbc:mysql://localhost:3306/npsmsinfo
 dataSource.username=root
 dataSource.password=mysql
