Added OperatorService with implementation

--- a/SMSInfoServiceClient/pom.xml
+++ b/SMSInfoServiceClient/pom.xml
@@ -52,6 +52,26 @@
             <artifactId>spring-tx</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- START: Apache CXF -->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxws</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http-jetty</artifactId>
+        </dependency>
+        <!-- END: Apache CXF -->
 
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -72,6 +92,12 @@
             <scope>test</scope>
         </dependency>
         <!-- END: TestNG -->
+
+        <!--Hibernate-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
 
         <!--Database-->
         <dependency>
