--- a/SMSInfoServiceClient/src/test/resources/test.smsinfoservice.properties
+++ b/SMSInfoServiceClient/src/test/resources/test.smsinfoservice.properties
@@ -4,3 +4,7 @@ dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/npsmsinfo
 dataSource.username=root
 dataSource.password=mysql
+
+hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+hibernate.hbm2ddl.auto=validate
+hibernate.show_sql=true
