--- a/SMSInfoServiceImpl/pom.xml
+++ b/SMSInfoServiceImpl/pom.xml
@@ -155,6 +155,14 @@
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>6.1.26</version>
             </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.tomcat.maven</groupId>-->
+                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
+                <!--<version>2.3-SNAPSHOT</version>-->
+                <!--<configuration>-->
+                    <!--<ignorePackaging>true</ignorePackaging>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
