--- a/SMSInfoServiceImpl/src/main/webapp/WEB-INF/dev.smsinfoservice.properties
+++ b/SMSInfoServiceImpl/src/main/webapp/WEB-INF/dev.smsinfoservice.properties
@@ -1,3 +1,16 @@
+hibernate.show_sql=true
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.hbm2ddl.auto=validate
+
+smsInfoServiceWsServer.address=/smsinfo
+
+# database
+dataSource.driverClassName=com.mysql.jdbc.Driver
+dataSource.url=jdbc:mysql://localhost:3306/npsmsinfo
+dataSource.username=root
+dataSource.password=mysql
+
+
 kyivstar.host=http://cc.goldentele.com/CPA_MULTI_XML/cpa.phtml
 kyivstar.hostUser=newmail
 kyivstar.hostPassword=sdgf232fsaqa2
@@ -11,3 +24,9 @@ life.newHost=https://api.life.com.ua/ip2sms/
 life.newAuthHost=api.life.com.ua
 life.newHostUser=NovaPoshta
 life.newHostPassword=eEQo95eufh2trfphb
+
+
+proxy.host=proxy.np.ua
+proxy.port=3128
+proxy.username=yushchenko.i
+proxy.password=igory200382
