Added OperatorsStub, fixed Quartz scheduler config

--- a/SMSInfoServiceClient/src/test/resources/META-INF/dev.smsinfoservice.properties
+++ b/SMSInfoServiceClient/src/test/resources/META-INF/dev.smsinfoservice.properties
@@ -23,4 +23,4 @@ life.newHostPassword=eEQo95eufh2trfphb
 proxy.host=proxy.np.ua
 proxy.port=3128
 proxy.username=yushchenko.i
-proxy.password=igory200382
+proxy.password=igoryu200382
