--- a/SMSInfoServiceImpl/src/main/webapp/WEB-INF/dev.smsinfoservice.properties
+++ b/SMSInfoServiceImpl/src/main/webapp/WEB-INF/dev.smsinfoservice.properties
@@ -3,6 +3,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=validate
 
 smsInfoServiceWsServer.address=/smsinfo
+smsInfoServiceWsClient.address=http://localhost:8080/SMSInfoServiceImpl/smsinfo
 
 # database
 dataSource.driverClassName=com.mysql.jdbc.Driver
@@ -12,6 +13,7 @@ dataSource.password=mysql
 
 
 kyivstar.host=http://cc.goldentele.com/CPA_MULTI_XML/cpa.phtml
+#kyivstar.host=http://localhost:9090/kyivstar_cpa/send
 kyivstar.hostUser=newmail
 kyivstar.hostPassword=sdgf232fsaqa2
 
@@ -20,7 +22,8 @@ life.authHost=sms.businesslife.com.ua
 life.hostUser=NovaPoshta
 life.hostPassword=NovaPoshta
 
-life.newHost=https://api.life.com.ua/ip2sms/
+#life.newHost=https://api.life.com.ua/ip2sms/
+life.newHost=http://localhost:8099/smsLife
 life.newAuthHost=api.life.com.ua
 life.newHostUser=NovaPoshta
 life.newHostPassword=eEQo95eufh2trfphb
